--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     <h1 id="clock"></h1>
+    <form id="login">
+        <input type="text", required, placeholder="what is your name?">
+        <input type="submit" value="Log In">
+    </form>
+    <h3 id="welcom" class="hidden"></h3>
     <script src="clock.js"></script>
+    <script src="login.js"></script>
 </body>
 </html>
