--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
         <input type="submit" value="Log In">
     </form>
     <h3 id="welcom" class="hidden"></h3>
+    <form id="list">
+        <input type="text", required, placeholder="Add to-do list">
+        <input type="submit" value="add">
+    </form>
+    <ul id="todo"></ul>
     <script src="clock.js"></script>
     <script src="login.js"></script>
+    <script src="list.js"></script>
 </body>
 </html>
