--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
         <input type="submit" value="add">
     </form>
     <ul id="todo"></ul>
-
+    <div id="weather">
+        <span></span>
+        <span></span>
+    </div>
     <script src="clock.js"></script>
     <script src="login.js"></script>
     <script src="list.js"></script>
     <script src="back.js"></script>
+    <script src="weather.js"></script>
 </body>
 </html>
