--- a/index.html
+++ b/index.html
@@ -8,20 +8,29 @@
     <title>To do List</title>
 </head>
 <body>
-    <h1 id="clock"></h1>
-    <form id="login">
-        <input type="text", required, placeholder="what is your name?">
-        <input type="submit" value="Log In">
-    </form>
-    <h3 id="welcom" class="hidden"></h3>
-    <form id="list">
-        <input type="text", required, placeholder="Add to-do list">
-        <input type="submit" value="add">
-    </form>
-    <ul id="todo"></ul>
-    <div id="weather">
-        <span></span>
-        <span></span>
+    <div class="bg">
+        <div class="content1">
+            <h1 id="clock"></h1>
+        </div>
+        <div class="content2">
+            <form id="login">
+                <input type="text", required, placeholder="what is your name?">
+                <input type="submit" value="Log In">
+            </form>
+            <h3 id="welcom" class="hidden"></h3>
+        </div>
+        <div class="content3">
+            <form id="list">
+                <input type="text", required, placeholder="Add to-do list">
+                <input type="submit" value="add">
+            </form>
+            <ul id="todo"></ul>
+            <div id="weather">
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+        <div class="img-cover"></div>
     </div>
     <script src="clock.js"></script>
     <script src="login.js"></script>
